--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Box Model Assignment</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="card">
+  <h2>Liam Porch</h2>
+  <img class="pic" src="../images/liam.png" alt="me" height="250" width="250">
+  <p class="descrip">Really awesome guy. Really loves Pizza and has a rather disgusting amount of hours on Goat Simulator 3.</p>
+</div>
 </body>
 </html>
